# mental-health

./: .gitignore  CLIENT_HANDOFF.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_OPTIONS.md  DOCKER_MONITORING.md  Dockerfile  FASTAPI_ENTRYPOINT_FIX.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FRONTEND_ANIMATION_ENHANCEMENTS.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  HOSTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_PUBLIC_URL.md  QUICK_SETUP.md  README_BACKEND_API.md  RUNNING_INSTRUCTIONS.md  RUNNING_SERVICES.md  SETUP_AND_RUN.ps1  SETUP_GUIDE.md  SYSTEMATIC_APPLICATION_VIEW.md  SYSTEM_ANALYSIS.md  SYSTEM_ARCHITECTURE.md  advanced_features.md.resolved  debug_database.py  debug_frontend.py  debug_services.py  docker-compose.prod.yml  docker-compose.yml  main.py  package.debug.json  (+6 more)
.github/workflows/: ci-cd.yml
ai_models/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md
api/: index.py
backend/: DEPLOYMENT_CONFIG.md  PRODUCTIVITY_IMPROVEMENTS.md  alembic.ini  check_db.py  init_db.py  main.py  mental_health.db-shm  mental_health.db-wal  migrate_to_mongodb.py  pyproject.toml  seed_more_doctors.py  setup_database.py  start_services_debug.py  test.db  test_mongodb_integration.py
backend-express/: .env.example  package-lock.json  package.json  server.js
data/: data.yaml
frontend/: frontend_logs.txt  next.config.js  package-lock.json  package.json
scripts/: start_full_app.py
(+83 files in other folders)
