[project]
name = "mental-health-app"
version = "1.0.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
    "motor",
    "pymongo",
    "python-dotenv"
]

[project.scripts]
app = "api.index:app"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
